--- a/squid.conf
+++ b/squid.conf
@@ -57,7 +57,8 @@ http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 
 # Allow traffic from localnet to New Relic endpoints
-http_access allow localnet allowed_domains
+http_access allow localnet 
+http_access allow allowed_domains
 
 # Protect web applications running on the same server as Squid
 http_access deny to_localhost
