--- a/squid.conf
+++ b/squid.conf
@@ -56,18 +56,23 @@ http_access deny !Safe_ports
 # Deny CONNECT to other than secure SSL ports
 http_access deny CONNECT !SSL_ports
 
+# Allow traffic to New Relic endpoints
+http_access allow allowed_domains
+
+# And finally deny all other access to this proxy
+http_access deny all
+
 # Allow traffic from localnet to New Relic endpoints
 http_access allow localnet 
-http_access allow allowed_domains
+
+# Deny all other access to this proxy
+http_access deny all
 
 # Protect web applications running on the same server as Squid
 http_access deny to_localhost
 
 # Protect cloud servers with sensitive info
 http_access deny to_linklocal
-
-# And finally deny all other access to this proxy
-http_access deny all
 
 # Squid normally listens to port 3128
 http_port 3128
